--- a/css/styles.css
+++ b/css/styles.css
@@ -106,6 +106,11 @@ a:active {
   margin-right: 10%;
   margin-bottom: 10%;
 }
+@media (max-width:767px){
+.bottom-nav a {
+  display:none;
+}
+}
 /*Media Queries*/
 @media (min-width:768px) {
   .main-nav li{
@@ -209,8 +214,26 @@ section {
     margin-left: 5px;
     width:100%;
   }
+  .bottom-nav ul {
+    font-size: 2rem;
+    font-weight: bold;
+    float:right;
+    margin-right: 10%;
+    margin-bottom: 10%;
+    display:inline-block;
+    padding-left: 20px;
+    padding-right: 5%;
+  }
+  .bottom-nav li {
+    padding:10px;
+    margin:10px;
+    float:right;
+  }
+  .backtotop a {
+    display:none;
+  }
 }
-@media (min-width:1024px){
+@media (min-width:1024px)and (max-width:1068px) {
 .primary {
   float:left;
   width:33.33%;
@@ -361,6 +384,26 @@ header {
   margin-top: 0;
   margin-right: 0;
   padding-right: 5px;
+}
+.bottom-nav ul {
+  font-size: 2rem;
+  font-weight: bold;
+  float:right;
+  margin-right: 10%;
+  margin-bottom: 10%;
+  display:inline-block;
+  padding-left: 20px;
+  padding-right: 5%;
+}
+.bottom-nav li {
+  padding:15px;
+  margin:20px;
+  margin-top: 30px;
+  float:right;
+  background-color: white;
+}
+.backtotop a {
+  display:none;
 }
 
 
